--- a/lib/locales/app_en.arb
+++ b/lib/locales/app_en.arb
@@ -9,6 +9,7 @@
   "buttonContinue": "Continue",
   "buttonExit": "Exit",
   "buttonCancel": "Cancel",
+  "buttonRemove": "Remove",
   "fieldName": "Name",
   "fieldAge": "Age",
   "fieldGender": "Gender",
@@ -18,6 +19,8 @@
   "dialogConfirmExitBody": "Are you sure you want to exit the game?",
   "dialogTerminateGameTitle": "Exit Game?",
   "dialogTerminateGameBody": "Are you sure you want to exit the game before it's finished?",
+  "dialogRemoveProfileTitle": "Remove profile?",
+  "dialogRemoveProfileBody": "Are you sure you want to remove this profile? This cannot be recovered later.",
   "feedbackEmptyName": "Please enter some name",
   "feedbackEmptyAge": "Please enter some age",
   "feedbackInvalidAge": "Invalid age",
