Stabilized the JSON read

--- a/lib/locales/app_en.arb
+++ b/lib/locales/app_en.arb
@@ -21,6 +21,8 @@
   "dialogTerminateGameBody": "Are you sure you want to exit the game before it's finished?",
   "dialogRemoveProfileTitle": "Remove profile?",
   "dialogRemoveProfileBody": "Are you sure you want to remove this profile? This cannot be recovered later.",
+  "dialogNoProfileTitle": "Create a Profile",
+  "dialogNoProfileBody": "In order to play, you need to create a profile. Would you like to create one now?",
   "feedbackEmptyName": "Please enter some name",
   "feedbackEmptyAge": "Please enter some age",
   "feedbackInvalidAge": "Invalid age",
@@ -28,6 +30,8 @@
   "feedbackGameCorrect": "Correct!",
   "feedbackGameWrong": "Wrong!",
   "feedbackPoints": "Points",
+  "feedbackLocked": "Locked",
+  "feedbackFinished": "Finished",
   "locationHome": "Home",
   "locationBus": "Bus",
   "locationSchool": "School",
