--- a/lib/locales/app_en.arb
+++ b/lib/locales/app_en.arb
@@ -11,8 +11,8 @@
   "pageGameFinishedPerfect": "Congratulations!",
   "pageGameFinishedAverage": "Not Bad!",
   "pageGameFinishedLow": "Better Luck Next Time!",
-  "pageGameReadyAssessment": "Recommendation: Ready to Take the Assessment",
-  "pageGameRetakeGame": "Recommendation: Retake the Game",
+  "pageGameReadyAssessment": "You are not Ready to Take the Assessment",
+  "pageGameRetakeGame": "You need to Retake the Game",
   "buttonContinue": "Continue",
   "buttonExit": "Exit",
   "buttonCancel": "Cancel",
