Added empty views

--- a/lib/locales/app_en.arb
+++ b/lib/locales/app_en.arb
@@ -43,6 +43,10 @@
   "feedbackPoints": "Points",
   "feedbackLocked": "Locked",
   "feedbackFinished": "Finished",
+  "emptyProfilesTitle": "No profiles available",
+  "emptyProfilesBody": "There's no profile available to be selected. Create one using the button below",
+  "emptyLeaderboardTitle": "No star players yet",
+  "emptyLeaderboardBody": "There's no recorded game data available, however, once you played and scored it will show up here.",
   "locationHome": "Home",
   "locationBus": "Bus",
   "locationSchool": "School",
